suricata log parsing work in progress

--- a/logstash/pipelines/suricata/11_suricata_logs.conf
+++ b/logstash/pipelines/suricata/11_suricata_logs.conf
@@ -19,16 +19,7 @@ filter {
     # suricata.alert.metadata.tag                - tags maybe
     # suricata.alert.signature                   - normalize with my signatures
     # suricata.alert.signature_id                - ''
-    # suricata.anomaly.app_proto                 - normalize into network.protocol
-    # suricata.anomaly.event                     - event.result maybe?
-    # suricata.dcerpc.interfaces.version         - network.protocol_version
-    # suricata.dcerpc.req.opnum                  - translate and map to event.action?
-    # suricata.dcerpc.response                   - event.result
-    # suricata.dcerpc.rpc_version                - network.protocol_version
-    # suricata.dhcp.assigned_ip                  -
-    # suricata.dhcp.client_mac                   -
-    # suricata.dhcp.dhcp_type                    - event.action or event.result?
-    # suricata.dhcp.type                         - event.action or event.result?
+
     # suricata.dnp3....                          - examine individually and look at exising DNP3 stuff
     # suricata.dns.....                          - examine individually and look at exising DNS stuff
     # suricata.fileinfo.end / suricata.files.end - is this the size? i'm not seeing suricata.*.size
@@ -82,15 +73,14 @@ filter {
     # suricata.tunnel.dest_ip/dest_port          - normalize into destination?
     # suricata.tunnel.src_ip/src_port            - normalize into source?
     # suricata.tunnel.proto                      - map and normalize
-    # suricata.vlan                              - normalize with VLAN
 
 
     # other TODO:
     # remove "failed" from protocols?
-    #
+    # parsing old files?
     #
 
-
+    #############################################################################################################################
     # If message looks like json, try to parse it as such. Otherwise, drop it like it's hot.
     if [message] =~ /^{.*}$/ {
 
@@ -134,6 +124,22 @@ filter {
                    merge => { "[event][id]" => "[suricata][flow_id]" } }
         }
 
+        if ([suricata][pcap_filename]) {
+          # trim path portion of suricata.pcap_filename
+          mutate { id => "mutate_gsub_suricata_pcap_filename_path"
+                   gsub => [ "[suricata][pcap_filename]", "^.*/", "" ] }
+        }
+
+        # ECS - event.kind based on event_type (https://www.elastic.co/guide/en/ecs/current/ecs-allowed-values-event-kind.html)
+        if ([suricata][event_type] == "alert") {
+          mutate { id => "mutate_add_field_suricata_ecs_event_kind_alert"
+                   add_field => { "[event][kind]" => "alert" } }
+        } else {
+          mutate { id => "mutate_add_field_suricata_ecs_event_kind_event"
+                   add_field => { "[event][kind]" => "event" } }
+        }
+
+        #############################################################################################################################
         # take care of log timestamps in the formats all the different tools want them (phew!)
         # @timestamp - date type
         # suricata.timestamp - ISO8601-formatted string
@@ -173,6 +179,7 @@ filter {
           "
         }
 
+        #############################################################################################################################
         #Renaming the global fields of every Suricata event type
         mutate { id => "mutate_suricata_rename_global_fields"
                  rename => { "[suricata][app_proto]" => "[network][protocol]" }
@@ -183,7 +190,11 @@ filter {
                  rename => { "[suricata][src_port]" => "[source][port]" }
                  rename => { "[suricata][proto]" => "[ipProtocol]" }
                  rename => { "[suricata][event_type]" => "[event][dataset]" }
+                 rename => { "[suricata][vlan]" => "[network][vlan][id]" }
         }
+
+        #############################################################################################################################
+        # network protocol stuff
 
         # transport protocol (e.g., udp, tcp, etc.)
         if ([ipProtocol]) {
@@ -218,6 +229,10 @@ filter {
         if ([suricata][app_proto_ts]) {
           mutate { id => "mutate_merge_suricata_app_proto_ts"
                    merge => { "[network][protocol]" => "[suricata][app_proto_ts]" } }
+        }
+        if ([suricata][anomaly][app_proto]) {
+          mutate { id => "mutate_merge_suricata_anomaly_app_proto"
+                   merge => { "[network][protocol]" => "[suricata][anomaly][app_proto]" } }
         }
 
         if (![network][protocol]) {
@@ -341,28 +356,52 @@ filter {
           }
         }
 
+        #############################################################################################################################
+        # protocol-specific
 
-        ###
-        #
-        # This section will be for renaming specific event type field names
-        # that are able to be mapped to the Elastic Common Schema (ECS)
-        #
-        ###
-
-        #Specific Alert renaming
+        #############################################################################################################################
+        # alert
         mutate {
                 id => "mutate_rename_suricata_alert_severity"
                 rename => { "[suricata][alert][severity]" => "[event][severity]" }
         }
 
-        #Specific http renaming
+        #############################################################################################################################
+        # http
         mutate {
                 id => "mutate_rename_suricata_http"
                 rename => { "[suricata][http][protocol]" => "[http][version]"}
                 rename => { "[suricata][http][status]" => "[http][response][status_code]"}
         }
 
-        #Specific dns renaming
+        #############################################################################################################################
+        # dhcp
+        if ([suricata][dhcp][assigned_ip]) {
+          mutate { id => "mutate_merge_suricata_dhcp_assigned_ip"
+                   merge => { "[dhcp][host]" => "[suricata][dhcp][assigned_ip]" } }
+        }
+
+        if ([suricata][dhcp][client_mac]) {
+          mutate {
+            id => "mutate_add_fields_suricata_dhcp_source_mac"
+            add_field =>  { "[source][mac]" => "%{[suricata][dhcp][client_mac]}" }
+          }
+          mutate { id => "mutate_merge_suricata_dhcp_client_mac"
+                   merge => { "[dhcp][mac]" => "[suricata][dhcp][client_mac]" } }
+        }
+
+        if ([suricata][dhcp][id]) {
+          mutate { id => "mutate_merge_suricata_dhcp_id"
+                   merge => { "[dhcp][id]" => "[suricata][dhcp][id]" } }
+        }
+
+        if ([suricata][dhcp][dhcp_type]) {
+          mutate { id => "mutate_merge_suricata_dhcp_type"
+                   merge => { "[dhcp][type]" => "[suricata][dhcp][dhcp_type]" } }
+        }
+
+        #############################################################################################################################
+        # dns
         mutate {
                 id => "mutate_rename_suricata_dns"
                 rename => { "[suricata][dns][id]" => "[dns][id]"}
@@ -370,7 +409,22 @@ filter {
                 rename => { "[suricata][dns][rcode]" => "[dns][response_code]"}
         }
 
-        #Specific tls renaming
+        #############################################################################################################################
+        # smb
+
+        if ([suricata][smb][filename]) {
+          ruby {
+            id => "ruby_suricata_smb_filename_dedoubleslash"
+            path => "/usr/share/logstash/malcolm-ruby/dedoubleslash.rb"
+            script_params => {
+              "source" => "[suricata][smb][filename]"
+              "target" => "[suricata][smb][filename]"
+            }
+          }
+        }
+
+        #############################################################################################################################
+        # tls
         mutate { id => "mutate_remove_field_suricata_ja3_strings"
                  remove_field => [ "[suricata][tls][ja3][string]",
                                    "[suricata][tls][ja3s][string]" ] }
@@ -396,29 +450,23 @@ filter {
                  }
          }
 
-        #Specific fileinfo renaming
-        mutate {
-                id => "mutate_rename_suricata_fileinfo"
-                # todo? is this right? or is it suricata.fileinfo.end
-                rename => { "[suricata][fileinfo][size]" => "[file][size]"}
-                rename => { "[suricata][fileinfo][sid]" => "[file][uid]"}
-                rename => { "[suricata][fileinfo][filename]" => "[file][path]"}
+        #############################################################################################################################
+        # tunnel
+        if ([suricata][tunnel][proto]) {
+          translate {
+            id => "translate_suricata_tunnel_proto"
+            source => "[suricata][tunnel][proto]"
+            target => "[suricata][tunnel][proto]"
+            dictionary_path => "/etc/ip_protocol_number_to_name.yaml"
+          }
         }
 
-        if ([suricata][pcap_filename]) {
-          # trim path portion of suricata.pcap_filename
-          mutate { id => "mutate_gsub_suricata_pcap_filename_path"
-                   gsub => [ "[suricata][pcap_filename]", "^.*/", "" ] }
-        }
+        #############################################################################################################################
+        # files/fileinfo
 
-        # ECS - event.kind based on event.dataset (https://www.elastic.co/guide/en/ecs/current/ecs-allowed-values-event-kind.html)
-        if ([event][dataset] == "alert") {
-          mutate { id => "mutate_add_field_suricata_ecs_event_kind_alert"
-                   add_field => { "[event][kind]" => "alert" } }
-        } else {
-          mutate { id => "mutate_add_field_suricata_ecs_event_kind_event"
-                   add_field => { "[event][kind]" => "event" } }
-        }
+
+        #############################################################################################################################
+        # wrap-up
 
         # create a repeatable fingerprint for document ID
         fingerprint {
