--- a/logstash/pipelines/enrichment/20_enriched_to_ecs.conf
+++ b/logstash/pipelines/enrichment/20_enriched_to_ecs.conf
@@ -121,6 +121,39 @@ filter {
     }
   }
 
+
+  # ECS - file.path from file.directory and file.name, if either of those are present and path is not already populated
+  if (![file][path]) and ([file][directory]) {
+    if ([file][name]) {
+      mutate { id => "mutate_add_field_ecs_path_from_dir_and_name"
+               add_field => { "[file][path]" => "%{[file][directory]}/%{[file][name]}" } }
+    } else {
+      mutate { id => "mutate_add_field_ecs_path_from_dir_only"
+               add_field => { "[file][path]" => "%{[file][directory]}/" } }
+    }
+  }
+
+  # ECS - file.directory and file.name from file.path, if file.path is present and the other two aren't
+  if ([file][path]) and (![file][directory]) and (![file][name]) {
+    ruby {
+      id => "ruby_ecs_file_path_normalize_to_directory_and_name"
+      code => "
+        if filePath = event.get('[file][path]') then
+          fileDir = Array.new unless (fileDir = event.get('[file][directory]'))
+          fileName = Array.new unless (fileName = event.get('[file][name]'))
+          Array(filePath).each do |val|
+            if parts = val.match(/(.*?)([^\\\/]+)?$/) then
+              preLastSep, postLastSep = parts.captures
+              fileDir << preLastSep.delete_suffix('\\').delete_suffix('/') unless preLastSep.nil? or (preLastSep.length <= 1)
+              fileName << postLastSep unless postLastSep.nil? or (postLastSep.length == 0)
+            end
+          end
+          event.set('[file][directory]', fileDir.uniq) unless fileDir.nil? or (fileDir.length == 0)
+          event.set('[file][name]', fileName.uniq) unless fileName.nil? or (fileName.length == 0)
+        end"
+    }
+  }
+
   # ECS - event.category based on event.dataset (https://www.elastic.co/guide/en/ecs/current/ecs-allowed-values-event-category.html)
   translate {
     id => "translate_ecs_event_category"
