--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -1063,6 +1063,7 @@ filter {
   # - file.name - name of the file including the extension, without the directory
   # - file.path - full path to the file, including the file name, including the drive letter when appropriate
   # Zeek's double backslashes should have already been handled by this point (see uses of dedoubleslash.rb)
+  # In the enrichment pipeline during normalization these fields will be used to construct each other.
 
   if ([zeek][ecat_foe_info][filename])           { mutate { id => "mutate_merge_normalize_zeek_ecat_foe_info_filename"
                                                            merge => { "[file][path]" => "[zeek][ecat_foe_info][filename]" } } }
@@ -1113,38 +1114,6 @@ filter {
         event.set('[file][directory]', fileDir) unless fileDir.nil? or (fileDir.length == 0)
         event.set('[file][name]', fileName) unless fileName.nil? or (fileName.length == 0)
       "
-    }
-  }
-
-  # ECS - file.path from file.directory and file.name, if either of those are present and path is not already populated
-  if (![file][path]) and ([file][directory]) {
-    if ([file][name]) {
-      mutate { id => "mutate_add_field_ecs_path_from_dir_and_name"
-               add_field => { "[file][path]" => "%{[file][directory]}/%{[file][name]}" } }
-    } else {
-      mutate { id => "mutate_add_field_ecs_path_from_dir_only"
-               add_field => { "[file][path]" => "%{[file][directory]}/" } }
-    }
-  }
-
-  # ECS - file.directory and file.name from file.path, if file.path is present and the other two aren't
-  if ([file][path]) and (![file][directory]) and (![file][name]) {
-    ruby {
-      id => "ruby_zeek_file_path_normalize_to_directory_and_name"
-      code => "
-        if filePath = event.get('[file][path]') then
-          fileDir = Array.new unless (fileDir = event.get('[file][directory]'))
-          fileName = Array.new unless (fileName = event.get('[file][name]'))
-          Array(filePath).each do |val|
-            if parts = val.match(/(.*?)([^\\\/]+)?$/) then
-              preLastSep, postLastSep = parts.captures
-              fileDir << preLastSep.delete_suffix('\\').delete_suffix('/') unless preLastSep.nil? or (preLastSep.length <= 1)
-              fileName << postLastSep unless postLastSep.nil? or (postLastSep.length == 0)
-            end
-          end
-          event.set('[file][directory]', fileDir.uniq) unless fileDir.nil? or (fileDir.length == 0)
-          event.set('[file][name]', fileName.uniq) unless fileName.nil? or (fileName.length == 0)
-        end"
     }
   }
 
