prune 'failed' as a network protocol from suricata events

--- a/logstash/pipelines/enrichment/97_make_unique.conf
+++ b/logstash/pipelines/enrichment/97_make_unique.conf
@@ -72,11 +72,23 @@ filter {
 
   # network protocol ##########################################################
   if ([network][protocol]) {
-    ruby {
-      id => "ruby_network_protocol_uniq"
-      path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
-      script_params => {
-        "field" => "[network][protocol]"
+    if ([suricata]) {
+      # suricata puts a "failed" protocol on some events and I don't care for it
+      ruby {
+        id => "ruby_network_protocol_uniq_drop_failed"
+        path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
+        script_params => {
+          "field" => "[network][protocol]"
+          "prune" => "failed"
+        }
+      }
+    } else {
+      ruby {
+        id => "ruby_network_protocol_uniq"
+        path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
+        script_params => {
+          "field" => "[network][protocol]"
+        }
       }
     }
   }
