dedupe iana_number

--- a/logstash/pipelines/enrichment/97_make_unique.conf
+++ b/logstash/pipelines/enrichment/97_make_unique.conf
@@ -93,6 +93,17 @@ filter {
     }
   }
 
+  # network protocol number #################################################
+  if ([network][iana_number]) {
+    ruby {
+      id => "ruby_network_iana_number_uniq"
+      path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
+      script_params => {
+        "field" => "[network][iana_number]"
+      }
+    }
+  }
+
   # network protocol (service) version ########################################
   if ([network][protocol_version]) {
     ruby {
