suricata log parsing work in progress

--- a/logstash/pipelines/suricata/11_suricata_logs.conf
+++ b/logstash/pipelines/suricata/11_suricata_logs.conf
@@ -22,16 +22,6 @@ filter {
 
     # suricata.dnp3....                          - examine individually and look at exising DNP3 stuff
     # suricata.dns.....                          - examine individually and look at exising DNS stuff
-    # suricata.fileinfo.end / suricata.files.end - is this the size? i'm not seeing suricata.*.size
-    # suricata.fileinfo.state                    - event.result?
-    # suricata.files.filename                    - store like other paths/files
-    # suricata.files.size                        - is this the size? difference between fileinfo/files?
-    # suricata.files.state                       - event.result?
-    # suricata.flow.age                          - something with duration?
-    # suricata.flow.bytes*                       - store like other connection metrics
-    # suricata.flow.packet*                      - store like other connection metrics
-    # suricata.flow.reason                       - event.result? or just do whatever like we do with zeek conn
-    # suricata.flow.state                        - event.result? or just do whatever like we do with zeek conn
     # suricata.ftp.reply                         - event.result
     # suricata.ftp.dynamic_port                  - tie to another port field that's normalized?
     # suricata.ftp.completion_code               - map to a string result and to event.result
@@ -64,7 +54,6 @@ filter {
     # suricata.snmp.usm                          - related user?
     # suricata.snmp.version                      - network.protocol_version
     # suricata.ssh....                           - examine individually and look at exising SSH stuff
-    # suricata.tcp....                           - examine individually and look at exising tcp/conn stuff
     # suricata.tftp.file                         - normalize with other filenames
     # suricata.tftp.packet                       - event.action?
     # suricata.tls.from_proto                    - normalize with network.protocol?
@@ -168,9 +157,10 @@ filter {
             timeStampMs = (1000*DateTime.parse(event.get('[suricata][timestamp]')).to_time.to_f).round(0)
             startTimeStr = event.get('[suricata][flow][start]')
             endTimeStr = event.get('[suricata][flow][end]')
+            ageMs = 1000*event.get('[suricata][flow][age]').to_i
             startTimeMs = startTimeStr.nil? ? timeStampMs : (1000*DateTime.parse(startTimeStr).to_time.to_f).round(0)
             endTimeMs = endTimeStr.nil? ? timeStampMs : (1000*DateTime.parse(endTimeStr).to_time.to_f).round(0)
-            durationMs = (endTimeMs > startTimeMs) ? endTimeMs-startTimeMs : 0
+            durationMs = (ageMs > 0) ? ageMs : ((endTimeMs > startTimeMs) ? endTimeMs-startTimeMs : 0)
             event.set('[timestamp]', timeStampMs)
             event.set('[firstPacket]', startTimeMs)
             event.set('[lastPacket]', endTimeMs)
@@ -360,6 +350,56 @@ filter {
         # protocol-specific
 
         #############################################################################################################################
+        # flow
+        # ECS - suricata.bytes_toclient -> server.bytes
+        if ([suricata][flow]) {
+          if ([suricata][flow][bytes_toclient])  {
+            mutate { id => "mutate_add_field_suricata_flow_server_bytes"
+                     add_field => { "[server][bytes]" => "%{[suricata][flow][bytes_toclient]}" } }
+          }
+          if ([suricata][flow][bytes_toserver])  {
+            mutate { id => "mutate_add_field_suricata_flow_client_bytes"
+                     add_field => { "[client][bytes]" => "%{[suricata][flow][bytes_toserver]}" } }
+          }
+          if ([suricata][flow][pkts_toclient])  {
+            mutate { id => "mutate_add_field_suricata_flow_server_pkts"
+                     add_field => { "[server][packets]" => "%{[suricata][flow][pkts_toclient]}" } }
+          }
+          if ([suricata][flow][pkts_toserver])  {
+            mutate { id => "mutate_add_field_suricata_flow_client_pkts"
+                     add_field => { "[client][packets]" => "%{[suricata][flow][pkts_toserver]}" } }
+          }
+          # aggregate total bytes and packets
+          ruby {
+            id => "ruby_suricata_bytes_and_packets_calc"
+            code => "totBytes = event.get('[client][bytes]').to_i + event.get('[server][bytes]').to_i
+                     event.set('[totDataBytes]', totBytes)
+                     event.set('[network][bytes]', totBytes)
+                     event.set('[network][packets]', event.get('[server][packets]').to_i + event.get('[client][packets]').to_i)"
+          }
+
+          # TODO: can we normalize suricata.flow.state with zeek.conn.conn_state_description somewhere?
+        }
+
+
+        #############################################################################################################################
+        # tcp
+        if ([suricata][tcp]) {
+          ruby {
+            id => "ruby_suricata_tcpflags"
+            # TODO: we are just setting the count to 1 becaue we don't have a count really, is there something better?
+            code => "
+              event.set('[tcpflags][ack]', 1) if (event.get('[suricata][tcp][ack]') == 'true')
+              event.set('[tcpflags][fin]', 1) if (event.get('[suricata][tcp][fin]') == 'true')
+              event.set('[tcpflags][psh]', 1) if (event.get('[suricata][tcp][psh]') == 'true')
+              event.set('[tcpflags][rst]', 1) if (event.get('[suricata][tcp][rst]') == 'true')
+              event.set('[tcpflags][syn]', 1) if (event.get('[suricata][tcp][syn]') == 'true')
+              event.set('[tcpflags][urg]', 1) if (event.get('[suricata][tcp][urg]') == 'true')
+            "
+          }
+        }
+
+        #############################################################################################################################
         # alert
         mutate {
                 id => "mutate_rename_suricata_alert_severity"
@@ -462,11 +502,20 @@ filter {
         }
 
         #############################################################################################################################
-        # files/fileinfo
-
-
-        #############################################################################################################################
         # wrap-up
+
+        # remove some fields we don't care about or aren't using the features associated with them
+        mutate {
+          id => "mutate_remove_field_suricata_useless"
+          remove_field => [
+            "[suricata][files][stored]",
+            "[suricata][fileinfo][stored]",
+            "[suricata][drop]",
+            "[suricata][packet]",
+            "[suricata][packet_info]",
+            "[suricata][payload_printable]"
+          ]
+        }
 
         # create a repeatable fingerprint for document ID
         fingerprint {
