--- a/logstash/pipelines/suricata/12_suricata_normalize.conf
+++ b/logstash/pipelines/suricata/12_suricata_normalize.conf
@@ -34,6 +34,13 @@ filter {
   if ([suricata][anomaly][event]) {             mutate { id => "mutate_merge_field_event_result_suricata_anomaly_event"
                                                          merge => { "[event][result]" => "[suricata][anomaly][event]" } } }
 
+  if ([suricata][flow][reason])   {             mutate { id => "mutate_merge_field_event_result_suricata_flow_reason"
+                                                         merge => { "[event][result]" => "[suricata][flow][reason]" } } }
+
+  if ([suricata][fileinfo][state]) {            mutate { id => "mutate_merge_field_event_result_suricata_fileinfo_state"
+                                                         merge => { "[event][result]" => "[suricata][fileinfo][state]" } } }
+
+
   if ([dhcp][type]) {
     if ("ack" in [dhcp][type]) {
       mutate { id => "mutate_add_field_suricata_dhcp_ack_result"
@@ -79,17 +86,37 @@ filter {
         code => "
             filePath = Array.new unless (filePath = event.get('[file][path]'))
             fileSize = Array.new unless (fileSize = event.get('[file][size]'))
+            results = Array.new unless (results = event.get('[event][result]'))
             Array(event.get('[suricata][files]')).each { |val|
               fname = val&.fetch('filename', nil)
               fsize = val&.fetch('size', nil)
+              fstate = val&.fetch('state', nil)
               filePath << fname unless fname.nil?
               fileSize << fsize unless fsize.nil?
+              results << fstate unless fstate.nil?
             }
             event.set('[file][path]', filePath.uniq) unless filePath.nil? or (filePath.length == 0)
             event.set('[file][size]', fileSize.uniq) unless fileSize.nil? or (fileSize.length == 0)
+            event.set('[event][result]', results.uniq) unless results.nil? or (results.length == 0)
         "
     }
   }
+
+  # File/MIME types ###################################################################################################
+  # ECS -> various -> file.mime_type
+  # collect all file/MIME types under the parent [file][mime_type] array
+
+  if ([suricata][fileinfo][magic]) {        mutate { id => "mutate_merge_normalize_suricata_fileinfo_mime_type"
+                                                     merge => { "[file][mime_type]" => "[suricata][fileinfo][magic]" } } }
+
+  # Hashes ############################################################################################################
+  # ECS - various -> related.hash (accumulate all hash/fingerprint fields into related.hash)
+  if ([suricata][fileinfo][md5]) {          mutate { id => "mutate_merge_field_related_hash_fileinfo_md5"
+                                                     merge => { "[related][hash]" => "[suricata][fileinfo][md5]" } } }
+  if ([suricata][fileinfo][sha1]) {         mutate { id => "mutate_merge_field_related_hash_fileinfo_sha1"
+                                                     merge => { "[related][hash]" => "[suricata][fileinfo][sha1]" } } }
+  if ([suricata][fileinfo][sha256]) {       mutate { id => "mutate_merge_field_related_hash_fileinfo_sha256"
+                                                     merge => { "[related][hash]" => "[suricata][fileinfo][sha256]" } } }
 
 
 }
