--- a/logstash/pipelines/suricata/19_severity.conf
+++ b/logstash/pipelines/suricata/19_severity.conf
@@ -22,6 +22,10 @@ filter {
       mutate { id => "mutate_add_field_severity_suricata_alert"
                add_field => { "[event][severity_tags]" => "Suricata Alert" } }
     }
+    if ([suricata][flow][alerted] == 'true') {
+      mutate { id => "mutate_add_field_severity_suricata_flow_alerted"
+               add_field => { "[event][severity_tags]" => "Suricata Alert" } }
+    }
 
     # ruby_calculate_final_severity_score will be performed in the enrichment stage of severity calculation
 
