--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -3997,6 +3997,7 @@ filter {
       source => "[zeek][conn][conn_state]"
       target => "[zeek][conn][conn_state_description]"
       dictionary_path => "/etc/conn_states.yaml"
+      # TODO: can we normalize this with suricata.flow.state somewhere?
     }
 
     mutate { id => "mutate_split_zeek_conn_tunnel_parents"
