--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -434,12 +434,15 @@ filter {
   }
 
   # this identifies which node the log came from
-  if ([host][name]) {
+  if ([beat][name]) {
+    mutate { id => "mutate_add_field_beat_name_node"
+             add_field => { "[node]" => "%{[beat][name]}" } }
+  } else if ([host][name]) {
     mutate { id => "mutate_add_field_host_name_node"
              add_field => { "[node]" => "%{[host][name]}" } }
   } else {
     mutate { id => "mutate_add_field_logstash_node"
-             add_field => { "[node]" => "logs" } }
+             add_field => { "[node]" => "malcolm" } }
   }
 
   # remove some fields we don't need (or don't need anymore)
