--- a/logstash/pipelines/enrichment/97_make_unique.conf
+++ b/logstash/pipelines/enrichment/97_make_unique.conf
@@ -1,6 +1,8 @@
 # Copyright (c) 2022 Battelle Energy Alliance, LLC.  All rights reserved.
 
-# take array fields that are already generic (i.e., ECS or Arkime) and deduplicate them
+# take array fields that are already generic (i.e., ECS or Arkime) and deduplicate them.
+# there is also a little bit of light normalization that happens here
+# at the same time for performance's sake
 
 filter {
 
@@ -72,17 +74,38 @@ filter {
 
   # network protocol ##########################################################
   if ([network][protocol]) {
-    if ([suricata]) {
-      # suricata puts a "failed" protocol on some events and I don't care for it
+
+    if ([event][provider] == "suricata") {
+      # - suricata puts a "failed" protocol on some events and I don't care for it
+      # - normalize service so it matches what we're getting from zeek
       ruby {
-        id => "ruby_network_protocol_uniq_drop_failed"
+        id => "ruby_network_protocol_uniq_suricata"
         path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
         script_params => {
           "field" => "[network][protocol]"
           "prune" => "failed"
+          "translate" => { "dcerpc" => "dce_rpc"
+                           "krb5" => "krb" }
         }
       }
+
+    } else if ([event][provider] == "zeek") {
+      # - do some service normalization for zeek while we're at it
+      ruby {
+        id => "ruby_network_protocol_uniq_zeek"
+        path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
+        script_params => {
+          "field" => "[network][protocol]"
+          "translate" => { "tftp_data" => "tftp"
+                           "ftp_data" => "ftp"
+                           "ipsec_ike" => "ipsec"
+                           "rdpeudp" => "rdp"
+                           "irc_data" => "irc" }
+        }
+      }
+
     } else {
+      # - just dedupe network.protocol
       ruby {
         id => "ruby_network_protocol_uniq"
         path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
@@ -90,6 +113,13 @@ filter {
           "field" => "[network][protocol]"
         }
       }
+    }
+
+    # ECS - network.protocol -> network.application
+    # TODO: what's the difference? https://www.elastic.co/guide/en/ecs/current/ecs-network.html
+    if (![network][application]) {
+      mutate { id => "mutate_add_field_ecs_network_application"
+               add_field => { "[network][application]" => "%{[network][protocol]}" } }
     }
   }
 
