--- a/suricata/supervisord.conf
+++ b/suricata/supervisord.conf
@@ -23,6 +23,7 @@ command=python3 /opt/pcap_suricata_processor.py
   --threads %(ENV_SURICATA_AUTO_ANALYZE_PCAP_THREADS)s
   --publisher "%(ENV_PCAP_MONITOR_HOST)s"
   --pcap-directory /data/pcap/processed
+  --node "%(ENV_PCAP_NODE_NAME)s"
   --suricata /usr/bin/suricata
   --autotag "%(ENV_AUTO_TAG)s"
   --autosuricata "%(ENV_SURICATA_AUTO_ANALYZE_PCAP_FILES)s"
