work in progress suricata log parsing

--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -116,6 +116,7 @@ user_agent.original=db:user_agent.original;group:malcolm;kind:termfield;friendly
 zeek.fuid=db:zeek.fuid;kind:termfield;friendly:File ID;help:File ID
 file.path=db:file.path;group:malcolm;kind:termfield;friendly:File Path;help:File Path
 file.mime_type=db:file.mime_type;group:malcolm;kind:termfield;friendly:File Magic;help:File Magic
+file.source=db:file.source;group:malcolm;kind:termfield;friendly:File Transport;help:File Transport
 
 # conn.log
 # https://docs.zeek.org/en/stable/scripts/base/protocols/conn/main.zeek.html#type-Conn::Info
@@ -418,7 +419,6 @@ zeek.ecat_arp_info.resp_hw_addr=db:zeek.ecat_arp_info.resp_hw_addr;group:zeek_ec
 zeek.files.tx_hosts=db:zeek.files.tx_hosts;group:zeek_files;kind:termfield;friendly:Transmitter;help:Transmitter
 zeek.files.rx_hosts=db:zeek.files.rx_hosts;group:zeek_files;kind:termfield;friendly:Receiver;help:Receiver
 zeek.files.conn_uids=db:zeek.files.conn_uids;group:zeek_files;kind:termfield;friendly:Connection ID;help:Connection ID
-zeek.files.source=db:zeek.files.source;group:zeek_files;kind:termfield;friendly:Source;help:Source
 zeek.files.depth=db:zeek.files.depth;group:zeek_files;kind:integer;friendly:Source Depth;help:Source Depth
 zeek.files.analyzers=db:zeek.files.analyzers;group:zeek_files;kind:termfield;friendly:Analyzer;help:Analyzer
 zeek.files.mime_type=db:zeek.files.mime_type;group:zeek_files;kind:termfield;friendly:File Magic;help:File Magic
