--- a/logstash/pipelines/enrichment/97_make_unique.conf
+++ b/logstash/pipelines/enrichment/97_make_unique.conf
@@ -85,6 +85,7 @@ filter {
           "field" => "[network][protocol]"
           "prune" => "failed"
           "translate" => { "dcerpc" => "dce_rpc"
+                           "ftp-data" => "ftp"
                            "krb5" => "krb" }
         }
       }
