--- a/logstash/pipelines/suricata/12_suricata_normalize.conf
+++ b/logstash/pipelines/suricata/12_suricata_normalize.conf
@@ -109,6 +109,12 @@ filter {
   if ([suricata][fileinfo][magic]) {        mutate { id => "mutate_merge_normalize_suricata_fileinfo_mime_type"
                                                      merge => { "[file][mime_type]" => "[suricata][fileinfo][magic]" } } }
 
+  # File/file source #####################################################################################################
+  # ECS -> various -> file.source
+  # collect file source under file.source
+  if ([file]) and ([network][protocol])      { mutate { id => "mutate_suricata_merge_file_source"
+                                                        merge => { "[file][source]" => "[network][protocol]" } } }
+
   # Hashes ############################################################################################################
   # ECS - various -> related.hash (accumulate all hash/fingerprint fields into related.hash)
   if ([suricata][fileinfo][md5]) {          mutate { id => "mutate_merge_field_related_hash_fileinfo_md5"
