--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -1129,6 +1129,12 @@ filter {
              merge => { "[protocol]" => "[network][protocol]" } }
   }
 
+  # File/file source #####################################################################################################
+  # ECS -> various -> file.source
+  # collect file source under file.source
+  if ([zeek][files][source]) { mutate { id => "mutate_suricata_rename_zeek_files_source"
+                                        rename => { "[zeek][files][source]" => "[file][source]" } } }
+
   # User agents #######################################################################################################
   # ECS -> various -> user_agent.original (https://www.elastic.co/guide/en/ecs/current/ecs-user_agent.html)
   #     - TODO: potentially more parsing could be done for user agent strings (.name, .device.name, .version)
