work in progress suricata log parsing

--- a/logstash/pipelines/enrichment/97_make_unique.conf
+++ b/logstash/pipelines/enrichment/97_make_unique.conf
@@ -232,6 +232,26 @@ filter {
     }
   }
 
+  if ([email][from][address]) {
+    ruby {
+      id => "ruby_email_from_address_uniq"
+      path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
+      script_params => {
+        "field" => "[email][from][address]"
+      }
+    }
+  }
+
+  if ([email][to][address]) {
+    ruby {
+      id => "ruby_email_to_address_uniq"
+      path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
+      script_params => {
+        "field" => "[email][to][address]"
+      }
+    }
+  }
+
   # smb ########################################################################
   if ([smb][filename]) {
     ruby {
