--- a/logstash/pipelines/suricata/11_suricata_logs.conf
+++ b/logstash/pipelines/suricata/11_suricata_logs.conf
@@ -22,40 +22,11 @@ filter {
 
     # suricata.dnp3....                          - examine individually and look at exising DNP3 stuff
     # suricata.dns.....                          - examine individually and look at exising DNS stuff
-    # suricata.ftp.reply                         - event.result
-    # suricata.ftp.dynamic_port                  - tie to another port field that's normalized?
-    # suricata.ftp.completion_code               - map to a string result and to event.result
-    # suricata.ftp.command                       - event.action
     # suricata.http....                          - examine individually and look at exising HTTP stuff
-    # suricata.*icmp_code/*icmp_type             - event.action/event.result? does that make sense
-    # suricata.ikev2.payload                     - event.action?
-    # suricata.ikev2.version_*                   - network.protocol_version
-    # suricata.krb5.cname                        - user? related.user?
-    # suricata.krb5.error_code                   - event.result
-    # suricata.krb5.failed_request               - not sure, is this the action, or the failure, or the reason for the failure?
-    # suricata.krb5.msg_type                     - ''
-    # suricata.krb5.realm                        - related.host or something like that?
-    # suricata.krb5.sname                        - user? related.user? related.host or something like that?
     # suricata.rdp....                           - examine individually and look at exising RDP stuff
     # suricata.rfb....                           - examine individually and look at exising RFB stuff
-    # suricata.sip.code / suricata.sip.reason    - event.result
-    # suricata.sip.method                        - event.action
-    # suricata.sip.uri                           - related uri?
-    # suricata.sip.version                       - network.protocol_version
     # suricata.smb....                           - examine individually and look at exising SMB stuff
-    # suricata.smtp.helo                         - related host?
-    # suricata.smtp.mail_from                    - related email
-    # suricata.smtp.rcpt_to                      - related email
-    # suricata.snmp.community                    - password? not really...
-    # suricata.snmp.error                        - event.result
-    # suricata.snmp.pdu_type                     - event.action or event.result
-    # suricata.snmp.trap_address                 - ip type? at least related.ip or related.host?
-    # suricata.snmp.trap_type                    - event.action or event.result
-    # suricata.snmp.usm                          - related user?
-    # suricata.snmp.version                      - network.protocol_version
     # suricata.ssh....                           - examine individually and look at exising SSH stuff
-    # suricata.tftp.file                         - normalize with other filenames
-    # suricata.tftp.packet                       - event.action?
     # suricata.tls.from_proto                    - normalize with network.protocol?
     # suricata.tls.notafter/notbefore            - date type
     # suricata.tls.sni                           - related domain? freq?
@@ -63,9 +34,7 @@ filter {
     # suricata.tunnel.src_ip/src_port            - normalize into source?
     # suricata.tunnel.proto                      - map and normalize
 
-
     # other TODO:
-    # remove "failed" from protocols?
     # parsing old files?
     #
 
@@ -407,6 +376,14 @@ filter {
         }
 
         #############################################################################################################################
+        # email
+        mutate {
+                id => "mutate_rename_suricata_email"
+                rename => { "[suricata][smtp][mail_from]" => "[email][src]" }
+                rename => { "[suricata][smtp][rcpt_to]" => "[email][dst]" }
+        }
+
+        #############################################################################################################################
         # http
         mutate {
                 id => "mutate_rename_suricata_http"
@@ -448,6 +425,16 @@ filter {
                 rename => { "[suricata][dns][type]" => "[dns][type]"}
                 rename => { "[suricata][dns][rcode]" => "[dns][response_code]"}
         }
+
+        #############################################################################################################################
+        # krb5
+        if ([suricata][krb5]) {
+          if ([suricata][krb5][cname] == "<empty>") { mutate { id => "mutate_remove_field_suricata_krb5_cname"
+                                                               remove_field => [ "[suricata][krb5][cname]" ] } }
+          if ([suricata][krb5][realm] == "<empty>") { mutate { id => "mutate_remove_field_suricata_krb5_realm"
+                                                               remove_field => [ "[suricata][krb5][realm]" ] } }
+        }
+
 
         #############################################################################################################################
         # smb
