--- a/logstash/pipelines/enrichment/20_enriched_to_ecs.conf
+++ b/logstash/pipelines/enrichment/20_enriched_to_ecs.conf
@@ -82,6 +82,12 @@ filter {
   if ([destination][mac]) {          mutate { id => "mutate_merge_field_related_mac_destination_mac"
                                               merge => { "[related][mac]" => "[destination][mac]" } } }
 
+  # Email - email.src/email.dst (Arkime) to ECS email.from.address/email.to.address
+  if ([email][src]) {          mutate { id => "mutate_merge_field_ecs_email_src"
+                                              merge => { "[email][from][address]" => "[email][src]" } } }
+  if ([email][dst]) {          mutate { id => "mutate_merge_field_ecs_email_dst"
+                                              merge => { "[email][to][address]" => "[email][dst]" } } }
+
   # ecs.version is required in all events - https://www.elastic.co/guide/en/ecs/current/ecs-ecs.html
   if (![ecs][version]) { mutate { id => "mutate_add_field_ecs_version"
                                   add_field => { "[ecs][version]" => "1.6.0" } } }
