--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -446,25 +446,25 @@ filter {
     # action based on > 0 values for variou get/set PDUs
     if ([zeek][snmp][get_bulk_requests]) and ([zeek][snmp][get_bulk_requests] != "0") {
       mutate { id => "mutate_add_field_zeek_snmp_get_bulk_requests_action"
-               add_field => { "[@metadata][snmp_get_bulk_requests_action]" => "GetBulkRequest" } }
+               add_field => { "[@metadata][snmp_get_bulk_requests_action]" => "get_bulk_request" } }
       mutate { id => "mutate_merge_zeek_snmp_action_get_bulk_requests"
                merge => { "[event][action]" => "[@metadata][snmp_get_bulk_requests_action]" } }
     }
     if ([zeek][snmp][get_requests]) and ([zeek][snmp][get_requests] != "0") {
       mutate { id => "mutate_add_field_zeek_snmp_get_requests_action"
-               add_field => { "[@metadata][snmp_get_requests_action]" => "GetRequest" } }
+               add_field => { "[@metadata][snmp_get_requests_action]" => "get_request" } }
       mutate { id => "mutate_merge_zeek_snmp_action_get_requests"
                merge => { "[event][action]" => "[@metadata][snmp_get_requests_action]" } }
     }
     if ([zeek][snmp][get_responses]) and ([zeek][snmp][get_responses] != "0") {
       mutate { id => "mutate_add_field_zeek_snmp_get_responses_action"
-               add_field => { "[@metadata][snmp_get_responses_action]" => "GetResponse" } }
+               add_field => { "[@metadata][snmp_get_responses_action]" => "get_response" } }
       mutate { id => "mutate_merge_zeek_snmp_action_get_responses"
                merge => { "[event][action]" => "[@metadata][snmp_get_responses_action]" } }
     }
     if ([zeek][snmp][set_requests]) and ([zeek][snmp][set_requests] != "0") {
       mutate { id => "mutate_add_field_zeek_snmp_set_requests_action"
-               add_field => { "[@metadata][snmp_set_requests_action]" => "SetRequest" } }
+               add_field => { "[@metadata][snmp_set_requests_action]" => "set_request" } }
       mutate { id => "mutate_merge_zeek_snmp_action_set_requests"
                merge => { "[event][action]" => "[@metadata][snmp_set_requests_action]" } }
     }
@@ -1168,8 +1168,11 @@ filter {
 
   # Hosts and domains #################################################################################################
   # ECS - various -> related.hosts (a lot of these are actually done in the enrichment pipeline)
-  if ([zeek][gquic][server_name]) {              mutate { id => "mutate_merge_field_related_hosts"
+  if ([zeek][gquic][server_name]) {              mutate { id => "mutate_merge_field_zeek_gquic_server_name_related_hosts"
                                                           merge => { "[related][hosts]" => "[zeek][gquic][server_name]" } } }
+
+  if ([zeek][smtp][helo]) {                      mutate { id => "mutate_merge_field_zeek_smtp_helo_related_hosts"
+                                                          merge => { "[related][hosts]" => "[zeek][smtp][helo]" } } }
 
   # URLs/URIs #########################################################################################################
   # ECS - various -> url.original
